--- a/TrackCoach/Tutorial1.xib
+++ b/TrackCoach/Tutorial1.xib
@@ -1,7 +1,6 @@
 <?xml version="1.0" encoding="UTF-8" standalone="no"?>
 <document type="com.apple.InterfaceBuilder3.CocoaTouch.XIB" version="3.0" toolsVersion="6254" systemVersion="14B25" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES">
     <dependencies>
-        <deployment identifier="iOS"/>
         <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="6247"/>
         <capability name="Aspect ratio constraints" minToolsVersion="5.1"/>
         <capability name="Constraints to layout margins" minToolsVersion="6.0"/>
@@ -26,18 +25,12 @@
                 </label>
                 <label opaque="NO" clipsSubviews="YES" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="◁ Start/Stop" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="T5i-Gc-3tq">
                     <rect key="frame" x="15" y="83" width="117" height="24"/>
-                    <constraints>
-                        <constraint firstAttribute="width" constant="117" id="nea-7l-Pe1"/>
-                    </constraints>
                     <fontDescription key="fontDescription" type="system" pointSize="20"/>
                     <color key="textColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
                     <nil key="highlightedColor"/>
                 </label>
                 <label opaque="NO" clipsSubviews="YES" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="◁ Lap/Reset" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="DSs-fW-wli">
                     <rect key="frame" x="15" y="146" width="116" height="24"/>
-                    <constraints>
-                        <constraint firstAttribute="width" constant="116" id="mTL-BB-ZL5"/>
-                    </constraints>
                     <fontDescription key="fontDescription" type="system" pointSize="20"/>
                     <color key="textColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
                     <nil key="highlightedColor"/>
@@ -66,16 +59,22 @@
                 <imageView userInteractionEnabled="NO" contentMode="scaleToFill" horizontalHuggingPriority="251" verticalHuggingPriority="251" image="transparent" translatesAutoresizingMaskIntoConstraints="NO" id="Vfq-5h-oIT">
                     <rect key="frame" x="237" y="65" width="126" height="126"/>
                     <constraints>
-                        <constraint firstAttribute="height" constant="126" id="DsA-0V-UaT"/>
                         <constraint firstAttribute="width" secondItem="Vfq-5h-oIT" secondAttribute="height" multiplier="1:1" id="EpJ-kk-zB4"/>
                         <constraint firstAttribute="width" constant="126" id="Ruu-RE-iRn"/>
                     </constraints>
-                    <variation key="default">
-                        <mask key="constraints">
-                            <exclude reference="DsA-0V-UaT"/>
-                        </mask>
-                    </variation>
                 </imageView>
+                <label opaque="NO" clipsSubviews="YES" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Start/Stop ▷" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="unP-CR-Kb3">
+                    <rect key="frame" x="15" y="83" width="117" height="24"/>
+                    <fontDescription key="fontDescription" type="system" pointSize="20"/>
+                    <color key="textColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
+                    <nil key="highlightedColor"/>
+                </label>
+                <label opaque="NO" clipsSubviews="YES" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Lap/Reset ▷" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="nNb-po-aG1">
+                    <rect key="frame" x="15" y="146" width="116" height="24"/>
+                    <fontDescription key="fontDescription" type="system" pointSize="20"/>
+                    <color key="textColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
+                    <nil key="highlightedColor"/>
+                </label>
             </subviews>
             <color key="backgroundColor" red="1" green="0.47843137250000001" blue="0.10980392160000001" alpha="1" colorSpace="calibratedRGB"/>
             <constraints>
@@ -85,11 +84,15 @@
                 <constraint firstItem="5Ib-wV-FQB" firstAttribute="top" secondItem="nL3-Yy-hy4" secondAttribute="bottom" constant="25" id="D2x-fo-FuN"/>
                 <constraint firstItem="T5i-Gc-3tq" firstAttribute="top" secondItem="iN0-l3-epB" secondAttribute="topMargin" constant="75" id="Kar-cd-5zY"/>
                 <constraint firstAttribute="centerX" secondItem="fiZ-6m-EFA" secondAttribute="centerX" id="L9I-69-cFm"/>
+                <constraint firstItem="nNb-po-aG1" firstAttribute="trailing" secondItem="unP-CR-Kb3" secondAttribute="trailing" id="M6m-6a-sVL"/>
                 <constraint firstItem="fiZ-6m-EFA" firstAttribute="top" secondItem="iN0-l3-epB" secondAttribute="topMargin" constant="30" id="Mgz-bd-aUt"/>
                 <constraint firstAttribute="bottom" secondItem="5Ib-wV-FQB" secondAttribute="bottom" id="OCC-JL-1c4"/>
+                <constraint firstItem="nNb-po-aG1" firstAttribute="top" secondItem="unP-CR-Kb3" secondAttribute="bottom" constant="39" id="TWC-WD-bsf"/>
                 <constraint firstItem="Vfq-5h-oIT" firstAttribute="leading" relation="greaterThanOrEqual" secondItem="DSs-fW-wli" secondAttribute="trailing" constant="10" id="WW9-0u-skk"/>
                 <constraint firstAttribute="centerX" secondItem="5Ib-wV-FQB" secondAttribute="centerX" id="Y6G-MH-DEf"/>
+                <constraint firstItem="unP-CR-Kb3" firstAttribute="top" secondItem="iN0-l3-epB" secondAttribute="top" constant="90" id="cPH-2v-9eo"/>
                 <constraint firstItem="Vfq-5h-oIT" firstAttribute="top" secondItem="fiZ-6m-EFA" secondAttribute="bottom" constant="-12" id="eMt-1r-ARW"/>
+                <constraint firstAttribute="trailing" secondItem="unP-CR-Kb3" secondAttribute="trailing" constant="15" id="ieh-PG-hHU"/>
                 <constraint firstItem="DSs-fW-wli" firstAttribute="top" secondItem="T5i-Gc-3tq" secondAttribute="bottom" constant="39" id="jmU-KE-e4X"/>
                 <constraint firstAttribute="centerX" secondItem="Vfq-5h-oIT" secondAttribute="centerX" priority="750" id="jqh-eG-K8t"/>
                 <constraint firstItem="nL3-Yy-hy4" firstAttribute="top" secondItem="Vfq-5h-oIT" secondAttribute="bottom" constant="60" id="pf4-gc-u1K"/>
@@ -97,6 +100,36 @@
                 <constraint firstItem="DSs-fW-wli" firstAttribute="leading" secondItem="T5i-Gc-3tq" secondAttribute="leading" id="wNA-r9-OqP"/>
             </constraints>
             <nil key="simulatedTopBarMetrics"/>
+            <variation key="default">
+                <mask key="subviews">
+                    <exclude reference="nNb-po-aG1"/>
+                </mask>
+                <mask key="constraints">
+                    <exclude reference="cPH-2v-9eo"/>
+                    <exclude reference="ieh-PG-hHU"/>
+                    <exclude reference="M6m-6a-sVL"/>
+                    <exclude reference="TWC-WD-bsf"/>
+                </mask>
+            </variation>
+            <variation key="heightClass=regular-widthClass=regular">
+                <mask key="subviews">
+                    <exclude reference="T5i-Gc-3tq"/>
+                    <exclude reference="DSs-fW-wli"/>
+                    <include reference="nNb-po-aG1"/>
+                </mask>
+                <mask key="constraints">
+                    <exclude reference="Kar-cd-5zY"/>
+                    <exclude reference="seR-tw-3bn"/>
+                    <exclude reference="jmU-KE-e4X"/>
+                    <exclude reference="wNA-r9-OqP"/>
+                    <exclude reference="WW9-0u-skk"/>
+                    <include reference="cPH-2v-9eo"/>
+                    <include reference="ieh-PG-hHU"/>
+                    <include reference="M6m-6a-sVL"/>
+                    <include reference="TWC-WD-bsf"/>
+                </mask>
+            </variation>
+            <point key="canvasLocation" x="223" y="256"/>
         </view>
     </objects>
     <resources>
