--- a/TrackCoach/Tutorial2.xib
+++ b/TrackCoach/Tutorial2.xib
@@ -5,7 +5,7 @@
         <capability name="Aspect ratio constraints" minToolsVersion="5.1"/>
     </dependencies>
     <objects>
-        <placeholder placeholderIdentifier="IBFilesOwner" id="-1" userLabel="File's Owner" customClass="Tutorial2ViewController">
+        <placeholder placeholderIdentifier="IBFilesOwner" id="-1" userLabel="File's Owner" customClass="TutorialViewController">
             <connections>
                 <outlet property="view" destination="iN0-l3-epB" id="dmD-CI-Ibu"/>
             </connections>
